# freesha

./: .gitignore  LICENSE  README.md  freesha_core.py  freesha_joy.py  pyproject.toml
.github/workflows/: tests.yml
docs/: FUTURE_ROADMAP_DRAFT.md
examples/: context_packet.json  openai_request.json
freesha_fixtures/: __init__.py  joy_models.fixture.json  joy_task.json
tests/: test_freesha_core.py  test_freesha_joy.py
