[project]
name = "freesha"
version = "0.2.0"
description = "Local-first token and context optimizer for OpenAI-compatible workflows"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "rexamax"}]
dependencies = []

[project.optional-dependencies]
tokens = ["tiktoken>=0.13"]
dev = ["ruff>=0.15", "build>=1.2"]

[project.scripts]
freesha = "freesha_core:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["freesha_core", "freesha_joy"]
packages = ["freesha_fixtures"]

[tool.setuptools.package-data]
freesha_fixtures = ["*.json"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
